<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="am_str">上午</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer">接听</string>
    <string name="app_demo_version">该应用为工程版本</string>
    <string name="app_name">component</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bt_not_connect">蓝牙未连接</string>
    <string name="btn_bt_connect">连接蓝牙</string>
    <string name="btn_bt_phone">蓝牙电话</string>
    <string name="btn_online">在线</string>
    <string name="btn_online_phone">在线电话</string>
    <string name="call_state_call_active">通话中</string>
    <string name="call_state_call_ended">通话结束</string>
    <string name="call_state_call_ending">正在断开</string>
    <string name="call_state_call_ringing">来电响铃</string>
    <string name="call_state_connecting">正在连接</string>
    <string name="call_state_dialing">正在拨号</string>
    <string name="call_state_hold">通话保持</string>
    <string name="calling_now">正在呼叫...</string>
    <string name="calllog_all">全部通话</string>
    <string name="calllog_missed">未接来电</string>
    <string name="can_not_call_again_when_calling">正在呼叫，不可拨打电话</string>
    <string name="can_not_call_your_number">不能拨打自己的号码</string>
    <string name="can_not_make_call">不能拨打电话</string>
    <string name="can_not_make_call_no_hfp">蓝牙未连接，不能拨打成功</string>
    <string name="can_not_make_more_call">不能再拨打更多电话了</string>
    <string name="cancel">取消</string>
    <string name="cancel_favorites">取消收藏</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_fav">清空收藏</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="company">公司</string>
    <string name="complete_vehicle">整车</string>
    <string name="conference_call">电话会议</string>
    <string name="connect">连接</string>
    <string name="connect_bluetooth_before_call">请先连接蓝牙，然后拨打电话</string>
    <string name="contact_address_label">地址</string>
    <string name="contact_email_label">邮箱</string>
    <string name="contact_phone_label">电话</string>
    <string name="contacts">联系人</string>
    <string name="contacts_are_not_synchronized">联系人未同步</string>
    <string name="contacts_more">联系人过多,无法下载完全</string>
    <string name="contacts_sync_complete">同步成功</string>
    <string name="contacts_sync_fail">同步失败，请检查手机是否开启联系人同步权限</string>
    <string name="contacts_sync_no_support">手机未开启同步联系人功能</string>
    <string name="contacts_unable_sync">无法同步</string>
    <string name="customization">自定义</string>
    <string name="default_error_message">Invalid input</string>
    <string name="delete">删除</string>
    <string name="delete_all_favorite">已清空收藏</string>
    <string name="delete_all_favorites_fail">删除所有收藏没有成功</string>
    <string name="delete_favorite">已删除收藏</string>
    <string name="delete_personal_favorite">删除收藏</string>
    <string name="dial_fail">呼叫失败</string>
    <string name="dial_pad">键盘</string>
    <string name="dialing_call">正在呼叫...</string>
    <string name="eight">8</string>
    <string name="eight_letters">TUV</string>
    <string name="enter_again">您输入的号码有误，请重新输入</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favorites_show_more_than">最多可以收藏100条联系人</string>
    <string name="fax_home">住宅传真</string>
    <string name="fax_work">单位传真</string>
    <string name="five">5</string>
    <string name="five_letters">JKL</string>
    <string name="four">4</string>
    <string name="four_letters">GHI</string>
    <string name="front_passenger_headrest">副驾头枕</string>
    <string name="go_to_connect">去连接</string>
    <string name="hang_up">挂断</string>
    <string name="hang_up_answer">挂断并接听</string>
    <string name="hide">隐藏</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hold_answer">保留并接听</string>
    <string name="holding">等待中</string>
    <string name="home">家</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="incoming_call">来电中</string>
    <string name="indeterminate">Neither checked nor unchecked</string>
    <string name="item_view_role_description">Tab</string>
    <string name="just_now">刚刚</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="main_contacts">联系人</string>
    <string name="main_dial">拨号键盘</string>
    <string name="main_driver_headrest">主驾头枕</string>
    <string name="main_favorites">个人收藏</string>
    <string name="main_recent">最近通话</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end</string>
    <string name="material_slider_range_start">Range start</string>
    <string name="material_slider_value">Value</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="minutes_ago">分钟前</string>
    <string name="mobile_phone">手机</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="nine">9</string>
    <string name="nine_letters">WXYZ</string>
    <string name="no_contact">暂无联系人</string>
    <string name="no_recent">暂无最近通话</string>
    <string name="one">1</string>
    <string name="pound">\#</string>
    <string name="seven">7</string>
    <string name="seven_letters">PQRS</string>
    <string name="six">6</string>
    <string name="six_letters">MNO</string>
    <string name="star">*</string>
    <string name="sync">同步</string>
    <string name="syncing">同步中</string>
    <string name="three">3</string>
    <string name="three_letters">DEF</string>
    <string name="two">2</string>
    <string name="two_letters">ABC</string>
    <string name="zero">0</string>
    <string name="zero_letters">+</string>
</resources>