<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingEnd="@dimen/width180"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/error_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/width178" android:src="@drawable/bluetooth_empty_icon" android:layout_marginStart="@dimen/width600" />
    <TextView android:gravity="center" android:id="@id/error_string" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/empty_text_margin_top" android:text="@string/bt_not_connect" android:layout_below="@id/error_icon" style="@style/NoHfpText" />
    <TextView android:textSize="@dimen/empty_btn_text_size" android:textColor="@color/bt_setting_connect_text_color" android:gravity="center" android:id="@id/btn_bt_connect" android:background="@drawable/dial_bt_setting_bg" android:layout_width="@dimen/width320" android:layout_height="@dimen/empty_btn_height" android:layout_marginTop="@dimen/empty_btn_margin_top" android:text="@string/btn_bt_connect" android:layout_below="@id/error_string" android:textAllCaps="false" android:layout_marginStart="@dimen/width620" android:textFontWeight="700" />
    <TextView android:textSize="@dimen/empty_btn_text_size" android:textColor="@color/bt_setting_connect_text_color" android:gravity="center" android:id="@id/btn_online_phone" android:background="@drawable/empty_button_bg" android:visibility="gone" android:layout_width="@dimen/width240" android:layout_height="@dimen/empty_btn_height" android:layout_marginTop="@dimen/empty_btn_margin_top" android:text="@string/btn_online_phone" android:layout_below="@id/error_string" android:layout_centerHorizontal="true" android:textAllCaps="false" android:fontFamily="sans-serif-bold" />
</RelativeLayout>