<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rl_title_bar_recent_list" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/width72" android:layout_marginTop="@dimen/width64" android:layout_marginStart="@dimen/width104">
        <RelativeLayout android:id="@id/tv_all_recent_recent_container" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_28" android:textStyle="bold" android:textColor="@color/recent_list_tab_text_color_selector" android:gravity="center" android:id="@id/tv_all_recent_recent_list" android:layout_width="wrap_content" android:layout_height="@dimen/width48" android:text="@string/calllog_all" />
            <View android:id="@id/v_all_recent_div_recent_list" android:background="@drawable/recent_list_tab_div_bg" android:layout_width="@dimen/width72" android:layout_height="@dimen/width28" android:layout_marginTop="@dimen/widthNegative3" android:layout_below="@id/tv_all_recent_recent_list" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/tv_missed_recent_recent_container" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginStart="@dimen/width120" android:layout_toEndOf="@id/tv_all_recent_recent_container">
            <TextView android:textSize="@dimen/text_size_28" android:textStyle="bold" android:textColor="@color/recent_list_tab_text_color_selector" android:gravity="center" android:id="@id/tv_missed_recent_recent_list" android:layout_width="wrap_content" android:layout_height="@dimen/width48" android:text="@string/calllog_missed" />
            <View android:id="@id/v_missed_recent_div_recent_list" android:background="@drawable/recent_list_tab_div_bg" android:visibility="gone" android:layout_width="@dimen/width72" android:layout_height="@dimen/width28" android:layout_marginTop="@dimen/widthNegative3" android:layout_below="@id/tv_missed_recent_recent_list" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_right_refresh_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="58.0dip" android:layout_marginEnd="@dimen/width132" android:layout_alignParentEnd="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.ecarx.btphone.view.BtSpinner android:id="@id/rl_recent_connect_devices_list" android:visibility="gone" android:layout_width="@dimen/bt_spinner_width" android:layout_height="@dimen/width86" android:layout_marginEnd="@dimen/width24" />
        <RelativeLayout android:id="@id/fl_refresh_contact_recent_list" android:background="@drawable/empty_button_bg" android:layout_width="@dimen/width200" android:layout_height="@dimen/width86" android:layout_toEndOf="@id/rl_recent_connect_devices_list">
            <TextView android:id="@id/tv_sync_recent_list" android:background="@drawable/ic_refresh_sync" android:layout_width="@dimen/width48" android:layout_height="@dimen/width48" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width36" />
            <ProgressBar android:id="@id/pb_recent_list" android:visibility="gone" android:layout_width="@dimen/width48" android:layout_height="@dimen/width48" android:indeterminateDrawable="@anim/progress_rotate" android:indeterminateDuration="1000" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width36" />
            <TextView android:textSize="@dimen/text_size_32" android:textColor="@color/circle_button_text_color" android:gravity="center" android:id="@id/tv_sync_recent_list_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sync" android:includeFontPadding="false" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width16" android:layout_toEndOf="@id/tv_sync_recent_list" />
            <TextView android:textSize="@dimen/text_size_32" android:textColor="@color/circle_button_text_color" android:gravity="center" android:id="@id/tv_syncing_recent_list_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/syncing" android:includeFontPadding="false" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width16" android:layout_marginEnd="@dimen/width36" android:layout_toEndOf="@id/pb_recent_list" />
        </RelativeLayout>
    </RelativeLayout>
    <com.zeekr.component.rebound.ZeekrReboundRefreshLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/width56" android:layout_below="@id/rl_right_refresh_container" android:layout_marginStart="@dimen/width116" android:layout_marginEnd="88.0dip">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_recent_list" android:scrollbars="none" android:fadingEdge="none" android:fadingEdgeLength="60.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never" android:requiresFadingEdge="vertical" android:paddingEnd="44.0dip" />
    </com.zeekr.component.rebound.ZeekrReboundRefreshLayout>
    <RelativeLayout android:id="@id/ll_no_recent_recent_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/width66">
        <ImageView android:id="@id/iv_recent_list" android:layout_width="@dimen/width256" android:layout_height="@dimen/width256" android:layout_marginTop="479.0dip" android:src="@drawable/ic_recent_default" android:scaleType="centerInside" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/text_size_36" android:textColor="@color/bt_list_empty_text_color" android:gravity="center" android:id="@id/tv_no_recent_recent_list" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/width40" android:text="@string/no_recent" android:includeFontPadding="false" android:layout_below="@id/iv_recent_list" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ViewStub android:id="@id/bt_not_connect_vs" android:layout="@layout/no_hfp" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>