<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rl_connect_contact_list" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/rl_no_contact_contact_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingEnd="152.0dip">
            <ImageView android:id="@id/iv_img_contact_list" android:layout_width="@dimen/width256" android:layout_height="@dimen/width256" android:layout_marginTop="519.0dip" android:src="@drawable/ic_bt_no_contacts" android:scaleType="centerInside" android:layout_marginStart="434.0dip" />
            <TextView android:textSize="@dimen/text_size_28" android:textColor="@color/bt_list_empty_text_color" android:gravity="center" android:id="@id/tv_no_contact_contact_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/width30" android:text="@string/no_contact" android:includeFontPadding="false" android:layout_below="@id/iv_img_contact_list" />
        </RelativeLayout>
        <com.zeekr.component.rebound.ZeekrReboundRefreshLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/width200" android:layout_marginStart="@dimen/width116" android:layout_marginEnd="88.0dip">
            <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_contact_list" android:scrollbars="none" android:fadingEdge="none" android:fadingEdgeLength="60.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never" android:requiresFadingEdge="vertical" android:paddingEnd="44.0dip" />
        </com.zeekr.component.rebound.ZeekrReboundRefreshLayout>
        <TextView android:textSize="132.0sp" android:textColor="@color/nav_view_select_line_color" android:gravity="center" android:id="@id/tv_big_choose_contact_list" android:background="@drawable/nav_view_select_line_bg" android:visibility="gone" android:layout_width="264.0dip" android:layout_height="264.0dip" android:layout_marginTop="558.0dip" android:text="A" android:layout_marginEnd="674.0dip" android:layout_alignParentEnd="true" />
        <RelativeLayout android:id="@id/rl_right_refresh_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="58.0dip" android:layout_marginEnd="@dimen/width132" android:layout_alignParentEnd="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
            <FrameLayout android:id="@id/iv_search_contact_list" android:background="@drawable/empty_button_bg" android:layout_width="@dimen/width86" android:layout_height="@dimen/width86" android:layout_marginEnd="@dimen/width24">
                <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/iv_search_contact_list_text" android:background="@drawable/ic_search_contacts" android:layout_width="@dimen/width48" android:layout_height="@dimen/width48" />
            </FrameLayout>
            <RelativeLayout android:id="@id/fl_refresh_contact_contact_list" android:background="@drawable/empty_button_bg" android:layout_width="@dimen/width200" android:layout_height="@dimen/width86" android:layout_toEndOf="@id/iv_search_contact_list">
                <TextView android:id="@id/tv_sync_contact_list" android:background="@drawable/ic_refresh_sync" android:layout_width="@dimen/width48" android:layout_height="@dimen/width48" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width36" />
                <ProgressBar android:id="@id/pb_contact_list" android:visibility="gone" android:layout_width="@dimen/width48" android:layout_height="@dimen/width48" android:indeterminateDrawable="@anim/progress_rotate" android:indeterminateDuration="1000" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width36" />
                <TextView android:textSize="@dimen/text_size_32" android:textColor="@color/circle_button_text_color" android:gravity="center" android:id="@id/tv_sync_contact_list_text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sync" android:includeFontPadding="false" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width16" android:layout_toEndOf="@id/tv_sync_contact_list" />
                <TextView android:textSize="@dimen/text_size_32" android:textColor="@color/circle_button_text_color" android:gravity="center" android:id="@id/tv_syncing_contact_list_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/syncing" android:includeFontPadding="false" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width16" android:layout_marginEnd="@dimen/width36" android:layout_toEndOf="@id/pb_contact_list" />
            </RelativeLayout>
        </RelativeLayout>
        <com.ecarx.btphone.view.BtSpinner android:id="@id/rl_contact_connect_devices_list" android:visibility="gone" android:layout_width="@dimen/bt_spinner_width" android:layout_height="@dimen/width86" android:layout_marginTop="58.0dip" android:layout_marginEnd="@dimen/width24" android:layout_toStartOf="@id/rl_right_refresh_container" />
    </RelativeLayout>
    <ViewStub android:id="@id/bt_not_connect_vs" android:layout="@layout/no_hfp" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>